<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App Basics -->
    <string name="app_name">QuakeDetec</string>
    
    <!-- Actionbar Menu -->
    <string name="action_settings">Einstellungen</string>
    <string name="reset_settings">Einstellungen zurücksetzen</string>
    
    <string name="sec_1">Info</string>
    <string name="sec_2">Karte</string>
    
    
    <!-- Einstellungen -->
    <string name="set_title_map">Karte</string>
    <string name="set_maptype">Standardansicht</string>
    <string name="set_title_location">Standort</string>
    <string name="set_location_update_intervall">Aktualisierungsinterval für GPS</string>
    <string name="set_location_update_intervall_summary">Je kürzer das Interval, desto genauer die Standortdaten. \nBei zu hohem Akkuverbrauch sollte das Interval länger gewählt werden.\nSie sollten auf jeden Fall in den Standorteinstellungen WLAN- und Mobilfunk-Standort aktivieren, da dieser sehr Energieeffizient ist und GPS nur genutzt wird, wenn WLAN- und Mobilfunknetz deaktiviert oder zu ungenau ist.</string>
    <string name="set_title_accelerometer">Beschleunigungssensor</string>
    <string name="set_accelerometer_rate">Sensorabtastrate</string>
    <string name="theme_title">Aussehen</string>
    <string name="application_theme_title">Theme</string>
    <string name="application_theme_summary">Änderungen werden erst nach einem Neustart wirksam.</string>
    <string name="notification_title">Benachrichtigungseinstellungen</string>
    <string name="notification_sound_title">Ton</string>
    <string name="notification_sound_summary">Ton bei Benachrichtigungen</string>
    <string name="notification_vibrate_title">Vibration</string>
    <string name="notification_vibrate_summary">Vibration bei Benachrichtigungen</string>
    <string name="notification_led_title">LED</string>
    <string name="notification_led_summary">Leuchtende LED bei Benachrichtigungen</string>
    <string name="set_titel_server">Servereinstellungen</string>
    <string name="set_server_url">Server Adresse</string>
    <string name="set_server_port">Server Port</string>
    <string name="restore_title">Zurücksetzen</string>
    <string name="application_restore_title">Standardeinstellungen wiederherstellen</string>
    
    <string name="settings_changedTheme">Das Theme wurde geändert!</string>
    <string name="settings_restart">Neustart wird durchgeführt!</string>
    <string name="settings_reset">Applikation wird zurückgesetzt!</string>
    <string name="settings_reset_sure">Sind Sie sicher, dass die Einstellungen zurückgesetzt werden sollen?\nDie Applikation wird nach dem Reset automatisch neugestartet.</string>

    
    <!-- TextViews -->    
    <string name="tv_info_webservice_url">WebService URL:</string>
    <string name="tv_info_connected_devices">Verbundene Geräte:</string>
    <string name="tv_info_last_earthquake">Letztes erkanntes Erdbeben:</string>
    <string name="tv_info_location">Aktuelle Position:</string>
    <string name="tv_info_location_provider">Ortungsdienst:</string>
    <string name="tv_info_accelerometer">Beschleunigungssensor:</string>
	
     <!-- Button --> 
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Abbrechen</string>
      
     <!-- ImageButton -->  
     <string name="my_location_button_description">My Location Button</string>
	 <string name="map_type_button_description">MapType Button</string> 
	 
	 <!-- MapTypes -->
	 <string name="maptype_normal">Normal</string>
	 <string name="maptype_satellite">Satellit</string>
	 <string name="maptype_terrain">Terrain</string>
	 <string name="maptype_hybrid">Hybrid</string>
	 
	 <!-- Toast -->
	  <string name="toast_noLocation">Kein Standort verfügbar</string>
	  <string name="toast_resetSettings">Standardardeinstellungen wiederhergestellt!</string>
</resources>
